tests/suite/snapshots/suite__check__tests__check__bad-array1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-array1.xi:2:5]
   │
 2 │     x:int[] = 1
   ·     ───┬───  
   ·        ╰───── Expected int[] but found int
───╯

